несколько вариантов стилей для сайта

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,11 +1,10 @@
 <header>
-    <span>Node <em>&</em> Express</span>
+    <h1>Туристическая компания "Путешествие"</h1>
     <nav>
-        <a href="/">Main</a>
-        <a href="/about">About us</a>
+        <ul>
+            <li><a href="#about">О нас</a></li>
+            <li><a href="#tours">Наши туры</a></li>
+            <li><a href="#contact">Контакты</a></li>
+        </ul>
     </nav>
-    <form method="post" action="/check-user">
-        <input type="text" name="userName" placeholder="User name">
-        <button type="submit">Search</button>
-    </form>
 </header>
